--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
   <body>
-    <!-- Your code here -->
+    <title>html images</title>
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img 
+      src="https://www.britannica.com/animal/lion"
+      alt="African lion">
+    <img 
+    src="https://www.pexels.com/search/lion/"
+    alt="African lion">
+    <title>"The King Of The Jungle!"</title>
   </body>
 </html>
